成功创建第一个 AI 应用

--- a/angular.json
+++ b/angular.json
@@ -65,7 +65,10 @@
               "buildTarget": "helloLeptonAi:build:development"
             }
           },
-          "defaultConfiguration": "development"
+          "defaultConfiguration": "development",
+          "options": {
+            "proxyConfig": "proxy.conf.json"
+          }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n"
@@ -92,5 +95,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "d19460cb-a2d6-4860-a7cf-272cfe42bac2"
   }
 }
