add depoy to github pages

--- a/angular.json
+++ b/angular.json
@@ -92,6 +92,13 @@
             ],
             "scripts": []
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy",
+          "options": {
+            "baseHref": "http://yitianyigexiangfa.com/helloLeptonAi/",
+            "repo": "https://github.com/JavaProgrammerLB/helloLeptonAi.git"
+          }
         }
       }
     }
